sgleam-core-tests/tests/snapshots/integration__run_images@add_curve2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/add_curve2.gleam
---
<svg width="100.0" height="100.90169943749473" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 100.0 0.0 L 100.0 100.0 L 0.0 100.0 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
    <path d="M 50.0 10.0 C 49.99999999999999 50.0 50.0 130.0 50.0 90.0" fill="none" stroke="rgba(255, 0, 0, 1.0)" />
  </g>
</svg>
