sgleam-core-tests/tests/snapshots/integration__run_images@add_line1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/add_line1.gleam
---
<svg width="40.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 40.0 20.0 A 20.0 20.0 0.0 0 1 0.0 20.0 A 20.0 20.0 0.0 0 1 40.0 20.0 Z" fill="none" stroke="rgba(128, 0, 0, 1.0)" />
    <path d="M 0.0 40.0 L 40.0 0.0" fill="none" stroke="rgba(128, 0, 0, 1.0)" />
  </g>
</svg>
