sgleam-core-tests/tests/snapshots/integration__run_images@add_solid_curve1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/add_solid_curve1.gleam
---
<svg width="100.0" height="100.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 100.0 0.0 L 100.0 100.0 L 0.0 100.0 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
    <path d="M 20.0 20.0 C 48.255986976214444 20.0 51.744013023785556 80.0 80.0 80.0 Z" fill="rgba(255, 0, 0, 1.0)" />
  </g>
</svg>
